--- a/JavaScript/JS-41.html
+++ b/JavaScript/JS-41.html
@@ -1,13 +1,20 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P04">JS:P04 > JSON : part-two</h1>
-<a href="JS-32.html">Next</a><a href="JS-30.html">Previous</a><a href="JS-01.html">Home</a>
+<h1 id="P06">JS:P06 > library and framework : part-one</h1>
+<a href="JS-42.html">Next</a><a href="JS-40.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
-JSON
+jQuery
+--------------------------------------------------------------------------------
+
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+node-js
 --------------------------------------------------------------------------------
 
 </pre>
