--- a/JavaScript/JS-34.html
+++ b/JavaScript/JS-34.html
@@ -1,13 +1,13 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P06">JS:P06 > reference : part-four</h1>
+<h1 id="P04">JS:P04 > web api : part-one</h1>
 <a href="JS-35.html">Next</a><a href="JS-33.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
-jQuery
+web api
 --------------------------------------------------------------------------------
 
 </pre>
