--- a/JavaScript/JS-36.html
+++ b/JavaScript/JS-36.html
@@ -1,13 +1,13 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P04">JS:P04 > JSON : part-two</h1>
-<a href="JS-32.html">Next</a><a href="JS-30.html">Previous</a><a href="JS-01.html">Home</a>
+<h1 id="P04">JS:P04 > form</h1>
+<a href="JS-37.html">Next</a><a href="JS-35.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
-JSON
+form
 --------------------------------------------------------------------------------
 
 </pre>
