--- a/JavaScript/JS-42.html
+++ b/JavaScript/JS-42.html
@@ -1,15 +1,19 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P04">JS:P04 > JSON : part-two</h1>
-<a href="JS-32.html">Next</a><a href="JS-30.html">Previous</a><a href="JS-01.html">Home</a>
+<h1 id="P06">JS:P06 > library and framework : part-two</h1>
+<a href="#">Next</a><a href="JS-41.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
-JSON
+frameworks
 --------------------------------------------------------------------------------
-
+1. react
+2. angularJS
+3. W3JS
+4. bootstrap 
+5. W3CSS
 </pre>
 
 
